# Baseball-Stats

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: aws_ecr.yaml  build_and_publish_docker_image.yaml  lint_and_test.yaml
baseball_obp_and_cobp/: __main__.py  game.py  games.py  obp.py  paths.py  play.py  player.py  retrosheet.py  selectors.py  stats.py  team.py  teams.py  ui.py
baseball_obp_and_cobp/stats/: aggregated.py  ba.py  basic.py  cops.py  obp.py  ops.py  sp.py  stat.py
baseball_obp_and_cobp/ui/: formatters.py  selectors.py  stats.py
baseball_stats/: __main__.py  events.py  games.py  player.py  plays.py  stats.py
cobp/: __init__.py  __main__.py  bases.py  env.py  game.py  paths.py  play.py  player.py  results.py  session.py  utils.py
cobp/data/: baseball_reference.py  cross_reference.py  fangraphs.py  retrosheet.py
cobp/models/: advance.py  base.py  bases.py  delta.py  game.py  out.py  play.py  play_modifier.py  play_result.py  player.py  substitution.py  team.py
cobp/stats/: aggregated.py  ba.py  basic.py  conditions.py  cops.py  derived.py  obp.py  ops.py  runs.py  sp.py  stat.py  summary.py  supports.py
cobp/ui/: core.py  download.py  formatters.py  selectors.py  stats.py
cobp/validation/: baseball_reference.py  fangraphs.py
scripts/: discrepancy_stats.py  gen_team_definitions.py
terraform/: main.tf
tests/: conftest.py  test__main__.py  test_game.py  test_retrosheet.py  test_utils.py
tests/data/: test_retrosheet.py
tests/models/: test_game.py
tests/stats/: test_aggregated.py  test_ba.py  test_conditions.py  test_obp.py  test_sp.py
