[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cobp"
version = "0.0.1"
description = "Calculate and correlate MLB conditional on base percentage (COBP)."
authors = [
  { name = "Ryan Ozelie", email = "ryan.ozelie@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.27.2",
    "requests==2.31.0",
    "pandas==2.1.1",
    "scipy==1.10.1",
    "python-dotenv==1.0.0",
    "pydantic-settings==2.1.0",
    "ordered_enum==0.0.8",
    "beautifulsoup4==4.12.2",
    "fuzzywuzzy==0.18.0",
    "pyretrosheet==0.0.6",
    "python-Levenshtein==0.23.0", # for fast fuzzy matching
]

[project.optional-dependencies]
# up-to-date dependencies as of 5/24/2023
dev = [
  "pytest==7.3.1",
  "pytest-mock==3.11.1",
  "black==23.3.0",
  "isort==5.12.0",
  "mypy==1.3.0",
  "ruff==0.0.269",
  "types-requests==2.31.0.1",
  "coverage==7.2.7",
  "selenium==4.15.2",
]

[project.urls]
"Homepage" = "https://github.com/rozelie/baseball_obp_and_cobp"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ['py311']
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
line_length = 120
py_version = 311
include_trailing_comma = true
profile = "black"
indent = 4
color_output = true

[tool.mypy]
python_version = 3.11
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = "attr-defined"